--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,34 +1,48 @@
 ---
-import ChargeSection from '../components/ChargeSection.astro';
+import Accessories from '../components/Accessories.astro';
 import HeroSection from '../components/HeroSection.astro';
 import LandingHeader from '../components/LandingHeader.astro';
+import Model3 from '../components/Model3.astro';
+import ModelS from '../components/ModelS.astro';
+import ModelX from '../components/ModelX.astro';
+import ModelY from '../components/ModelY.astro';
+import Powewall from '../components/Powewall.astro';
+import Section from '../components/Section.astro';
+import SolarPanels from '../components/SolarPanels.astro';
+import SolarRoof from '../components/SolarRoof.astro';
 import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout title="Tesla">
 	<LandingHeader />
 	
-	<main class="snap-y snap-mandatory relative w-full h-screen overflow-auto scroll-smooth">
+	<main class="snap-y snap-mandatory relative w-full h-screen overflow-auto overflow-x-hidden scroll-smooth">
 		<div class="snap-center">
-			<HeroSection />
+			<HeroSection/>
 		</div>
 		<div class="snap-center">
-			<ChargeSection />
+			<ModelS />
 		</div>
 		<div class="snap-center">
-			<HeroSection />
+			<Model3 />
 		</div>
 		<div class="snap-center">
-			<ChargeSection />
+			<ModelX />
 		</div>
 		<div class="snap-center">
-			<HeroSection />
+			<ModelY />
 		</div>
 		<div class="snap-center">
-			<ChargeSection />
+			<SolarRoof />
 		</div>
 		<div class="snap-center">
-			<HeroSection />
+			<SolarPanels />
+		</div>
+		<div class="snap-center">
+			<Powewall />
+		</div>
+		<div class="snap-center">
+			<Accessories />
 		</div>
 	</main>
 </Layout>
