:bug: [Fix a bug] src address
[Fix a bug] src address

--- a/src/components/Accessories.astro
+++ b/src/components/Accessories.astro
@@ -24,5 +24,5 @@ import Section from "./Section.astro";
             </ul>
         </nav>
     </div>
-    <img slot="background" src="/public/Desktop_Accessories.avif" alt="Model Y" class="h-full w-full object-cover object-center">
+    <img slot="background" src="/Desktop_Accessories.avif" alt="Model Y" class="h-full w-full object-cover object-center">
 </Section>
