--- a/src/components/Powewall.astro
+++ b/src/components/Powewall.astro
@@ -42,5 +42,5 @@ import Section from "./Section.astro";
         Order With Solar
         </a>
     </div>
-    <img slot="background" src="/public/PW_Inverter_Backup_D.avif" alt="Model Y" class="h-full w-full object-cover object-center">
+    <img slot="background" src="/PW_Inverter_Backup_D.avif" alt="Model Y" class="h-full w-full object-cover object-center">
 </Section>
