--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -11,5 +11,5 @@ import Section from "./Section.astro";
         Demo Drive
         </a>
     </div>
-    <video slot="background" class="object-center object-cover h-full w-full" autoplay muted loop src="/public/video.webm"></video>
+    <video slot="background" class="object-center object-cover h-full w-full" autoplay muted loop src="/video.webm"></video>
 </Section>
